IGNITE-17658 add-opens=java.base/java.lang.invoke for peer class loading - Fixes #10242.
Signed-off-by: Ilya Kaznacheev <ilya.kaznacheev@chronicle.software>