@@ -65,6 +65,7 @@ getJavaSpecificOpts() {
           --add-opens=java.base/java.nio=ALL-UNNAMED \
           --add-opens=java.base/java.util=ALL-UNNAMED \
           --add-opens=java.base/java.lang=ALL-UNNAMED \
+          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
           ${current_value}"
   fi
 
